--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "5.2.0",
+    "bootstrap": "^5.2.0",
     "install": "^0.13.0",
     "my-app": "file:",
     "npm": "^10.9.0",
