--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +11,7 @@
     "bootstrap": "^5.2.0",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
+    "mdb-react-ui-kit": "^9.0.0",
     "my-app": "file:",
     "npm": "^10.9.0",
     "react": "^18.3.1",
