--- a/package.json
+++ b/package.json
@@ -3,22 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^6.1.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.7",
-    "bootstrap": "^5.2.0",
+    "axios": "^1.7.8",
+    "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "install": "^0.13.0",
-    "jwt-decode": "^4.0.0",
+    "jwt-decode": "^2.2.0",
     "mdb-react-ui-kit": "^9.0.0",
     "my-app": "file:",
     "npm": "^10.9.0",
     "react": "^18.3.1",
-    "react-bootstrap": "2.4.0",
+    "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
